--- a/pemrograman-python/Makefile
+++ b/pemrograman-python/Makefile
@@ -1,2 +1,2 @@
-pdf:
-	pandoc --pdf-engine=xelatex -o hasil/pemrograman-python.pdf --toc --from markdown --template eisvogel --listings --top-level-division=chapter isi/*
+all:
+	asciidoctor-pdf -D hasil/ -a pdf-themesdir=resources/themes -a pdf-theme=zimera pemrograman-python.adoc
