--- a/pemrograman-python/resources/themes/zimera-theme.yml
+++ b/pemrograman-python/resources/themes/zimera-theme.yml
@@ -70,9 +70,13 @@ admonition:
   column-rule-color: #aa0000
   column-rule-width: 1
 title-page:
-  align: right
-  font-size: 14
-  font-style: bold
+  title:
+    align: right
+    font-size: 14
+    font-style: bold
+    text-transform: smallcaps
+    top: 80%
+    #background-color: #EAEAEA
   logo:
-    image: image:{docdir}/images/logo.png[width=200]
+    image: image:{docdir}/images/logo.png[pdfwidth=25%]
     top: 5%
