Add contents - function (chapter 4)

--- a/pemrograman-python/Makefile
+++ b/pemrograman-python/Makefile
@@ -1,2 +1,5 @@
 all:
 	asciidoctor-pdf -D hasil/ -a pdf-themesdir=resources/themes -a pdf-theme=zimera pemrograman-python.adoc
+
+view:
+	mupdf hasil/pemrograman-python.pdf
